--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     </head>
   
     <body>
+        <img>
+            https://avatars2.githubusercontent.com/u/66682243?v=4
+        
       Hello there, awesome person!
     </body>
   
