--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   
     <body>
         <h1>
-            i am a header
+            <img src="https://avatars2.githubusercontent.com/u/66682243?v=4">
         </h1>
         
       Hello there, awesome person!
