--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
         <h1>
             <img src="https://avatars2.githubusercontent.com/u/66682243?v=4">
         </h1>
+        <ol>
+            <li>Reddit</li>
+            <li>Youtube</li>
+            <li>Google</li>
+        </ol>
         
       Hello there, awesome person!
     </body>
