--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
             <img src="https://avatars2.githubusercontent.com/u/66682243?v=4">
         </h1>
         <ol>
-            <li>Reddit</li>
-            <li>Youtube</li>
-            <li>Google</li>
+            <li>My favorite site is <a href="https://www.reddit.com/r/leagueoflegends/">Reddit</a>!</li>
+            <li>My favorite site is <a href="https://www.youtube.com/?feature=signin">Youtube</a>!</li>
+            <li>My favorite site is <a href="https://www.google.com/">Google</a>!</li>
         </ol>
         
       Hello there, awesome person!
